# kitsat-groundstation-2

./: .gitignore  LICENSE  README.md  debug_serial.py  pyproject.toml
.github/workflows/: release.yml
kitsat_gs/: __main__.py  app.py
kitsat_gs/assets/: style.qss  style_aerospace.qss  style_light.qss
kitsat_gs/cfg/: housekeeping.csv  node_colors.csv
kitsat_gs/config/: settings.py
kitsat_gs/core/: command_catalog.py  command_registry.py  events.py  firmware_updater.py  housekeeping_catalog.py  image_manager.py  models.py  modem_bridge.py  packet_dispatcher.py  pass_predictor.py  script_engine.py  telemetry_exporter.py  telemetry_store.py  tle_generator.py  tle_parser.py
kitsat_gs/orbit/: __init__.py  ground_station.py  propagator.py  simulator.py
kitsat_gs/providers/: __init__.py  base.py  mock.py
kitsat_gs/scripting/: __init__.py  builtins.py  interpreter.py  lexer.py  parser.py
kitsat_gs/ui/: about_widget.py  command_builder_widget.py  firmware_widget.py  housekeeping_widget.py  image_widget.py  main_window.py  map_widget.py  orbit_widget.py  script_widget.py  settings_widget.py  terminal_widget.py
kitsat_gs/ui/tabs/: __init__.py  command_tab.py  dashboard_tab.py  repl_tab.py  scripting_tab.py
packaging/: build_linux.spec  build_macos.spec  build_windows.spec
tests/: test_command_catalog.py  test_firmware_updater.py  test_housekeeping_catalog.py  test_image_manager.py  test_modem_bridge.py  test_pass_predictor.py  test_script_engine.py  test_settings.py  test_telemetry_store.py  test_tle_generator.py  test_tle_parser.py
(+4 files in other folders)
