[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kitsat-gs"
version = "2.0.0"
description = "Kitsat Ground Station GUI - cross-platform satellite control software"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["satellite", "ground-station", "cubesat", "kitsat", "space"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "PySide6>=6.6",
    "kitsat>=1.2.15",
    "sgp4>=2.22",
    "pyqtgraph>=0.13",
    "folium>=0.15",
    "loguru>=0.7",
]

[project.scripts]
kitsat-gs = "kitsat_gs.__main__:main"

[project.urls]
Homepage = "https://github.com/nikandt/kitsat-groundstation-GUI-2"
"Bug Tracker" = "https://github.com/nikandt/kitsat-groundstation-GUI-2/issues"

[project.optional-dependencies]
# Map tab requires QtWebEngine, which only supports Python 3.11-3.12 currently.
# Install with: pip install kitsat-gs[map]
map = [
    "PySide6-WebEngine>=6.6",
]
dev = [
    "pytest>=8",
    "pytest-qt>=4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kitsat_gs*"]

[tool.setuptools.package-data]
kitsat_gs = ["cfg/*.csv", "assets/*"]
